crates/swc_css_parser/tests/errors/percent/plus/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/percent/plus/input.css:1:12
  |
1 | a { width: +0.%; }
  |            ^^^^

